--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,7 +17,7 @@ button {
 main {
   background-color: #333;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,6 +109,14 @@ main .container #display {
       -ms-flex-pack: center;
           justify-content: center;
   margin-top: 15px;
+}
+main .container #display .display {
+  -webkit-transition: 0.1s linear;
+  transition: 0.1s linear;
+}
+main .container #display .display.changed {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
 }
 main .container .audio-controls {
   display: -webkit-box;
